# goob

./: .gitignore  README.md  README.txt  build_level.py  pyproject.toml  requirements.txt  run_game.py  run_game.spec
assets/: test_level.json
game/: __init__.py  coin.py  level.py  menu.py  room.py  twin.py  wall.py
game/levels/: 0.py  1.py  2.py  3.py  4.py  __init__.py
game/traps/: __init__.py  spike.py  trap.py
game/triggers/: __init__.py  button.py  trigger.py
levels/: 00.py  01.py  07.py  09.py  5.py  6.py  8.py  9.py  __init__.py
