[tool.poetry]
name = "Goob"
version = "0.1.0"
description = ""
authors = ["Patrick Brennan (AM2i9)"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
